<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_Manufacturer_label" Id="{9dc3d022-7b3f-4a1d-8035-e631862a14dc}">
    <Declaration><![CDATA[TYPE ST_Manufacturer_label :
STRUCT
	Serial_Number			: DWORD;
	Min_v					: DWORD;
	Max_v					: DWORD;
	Motor_rated_current		: DWORD;
	Drive_rated_current		: DWORD;
	Max_current				: WORD;
	Motor_rated_torque		: DWORD;
	Max_torque				: WORD;
	Motor_rated_speed		: DWORD;
	Number_of_pole_pairs	: WORD;
	Motor_torque_constant	: REAL;
	Flux_producing_P_gain	: REAL;
	Flux_producing_I_gain	: REAL;
	Torque_producing_P_gain	: REAL;
	Torque_producing_I_gain	: REAL;
	Magnetic_encoder_offset	: WORD;
	Motor_with_brake		: WORD;
	Encoder_mode_adjust		: WORD;
	Motor_max_speed			: WORD;
	Rotor_inertia			: REAL;
	Motor_time_at_peak		: REAL;
	Drive_time_at_peak		: REAL;
	Singleturn_resolution	: BYTE;
	Multiturn_resolution	: BYTE;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>